[package]
name = "websocket-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint = "0.23"
tendermint-rpc = { version = "0.23", features = ["websocket-client"] }
futures = "0.3"
tokio = { version = "1", features = [ "full" ] }
log = "0.4.14"
env_logger = "0.9.0"
dotenv = { version = "0.15.0" }
dotenv_codegen = "0.15.0"
pretty_env_logger = "0.4.0"
ansi_term = "0.12"
anyhow = "1.0"